# Picture-with-Tag

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 코드-단순변경.md  코드-리팩토링.md
doc/: Introduction.md  Project Libraries Explained.md
src/: AddPage.cpp  AddPage.h  AppInitializer.cpp  AppInitializer.h  BasePage.cpp  BasePage.h  DataItem.h  DataManagementPage.cpp  DataManagementPage.h  FrameID.h  FrameManager.cpp  FrameManager.h  GlobalColors.cpp  GlobalColors.h  PageID.h  PageManager.cpp  PageManager.h  PictureFrame.cpp  PictureFrame.h  SearchPage.cpp  SearchPage.h  TitleFrame.cpp  TitleFrame.h  TitlePage.cpp  TitlePage.h  main.cpp
src/data/: DataManager.cpp  DataManager.h
src/helper/: Constants.h  UIHelpers.cpp  UIHelpers.h
src/page/: AddPage.cpp  AddPage.h  BasePage.cpp  BasePage.h  EditPage.cpp  EditPage.h  PageID.h  PageManager.cpp  PageManager.h  SearchPage.cpp  SearchPage.h  TitlePage.cpp
